<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".register">


    <TextView
            android:id="@+id/tv_register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/tv_register_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/rubik"
            />

    <TextView
            android:id="@+id/tv_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/tv_login_password"
            app:layout_constraintEnd_toEndOf="@+id/tv_register_user"
            app:layout_constraintStart_toStartOf="@+id/tv_register_user"
            app:layout_constraintTop_toBottomOf="@+id/et_register_user"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/rubik"
            />

    <Button
            android:id="@+id/button_register_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/button_register"
            android:textSize="20sp"
            android:fontFamily="@font/rubik"

            app:layout_constraintEnd_toEndOf="@+id/tv_register_password"
            app:layout_constraintStart_toStartOf="@+id/tv_register_password"
            app:layout_constraintTop_toBottomOf="@+id/etp_register_password" />

    <EditText
            android:id="@+id/et_register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/tv_register_user"
            app:layout_constraintStart_toStartOf="@+id/tv_register_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_user" />

    <EditText
            android:id="@+id/etp_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/et_register_user"
            app:layout_constraintStart_toStartOf="@+id/et_register_user"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_password" />
</androidx.constraintlayout.widget.ConstraintLayout>